Replace google format with eclipse format (#456)
* Replace google format with eclipse format

* Format code with spotless