@@ -27,9 +27,9 @@ class StreamUtilsTest {
   void partition() {
     List<Integer> list = IntStream.range(0, 100).mapToObj(i -> i).toList();
     List<List<Integer>> partitions =
-        StreamUtils.partition(list.stream(), 10)
-            .map(stream -> stream.collect(Collectors.toList()))
-            .toList();
+      StreamUtils.partition(list.stream(), 10)
+        .map(stream -> stream.collect(Collectors.toList()))
+        .toList();
     assertEquals(partitions.size(), 10);
   }
 }
